# nrm-experiments

./: .gitignore  README.md
RL_gym_stable_baseline_3/: README.md  control_1_od.py  data_get_1od.py  gym_envs.py  main.py  requirements.txt  system_sym.py
RL_gym_stable_baseline_3/project_logs/: main.tex  references.bib  requirements.txt
bandits/: .gitignore  Makefile  analysis.nix  control.dhall  eptwice.sh  expe.nix  experiment.py  export.py  internal-control-analysis.rmd  internal-control-analysis.sh  internal-control-experiments.csv  internal-control-experiments.ipynb  internal-control-experiments.py  internal-control.analysis.ipynb  prepare.sh  stream.nix  streamtwice.sh
candle/: expe.nix  expe.sh  experiment.py  wrapper.sh
control-analysis/: RAPL-static-characterization.py
exp4r-notebook/: deps.cabal  shell.nix
g5k/: README.build.rst  README.deploy.rst  README.rst  install-run-g5k.sh
g5k/docs/: g5k-processors_02648b62b.ods
g5k/kameleon/: debian10-x64-hnrm.yaml
g5k/kameleon/steps/data/xpctl/: .gitattributes  .gitignore  .pylintrc  .tarexclude  constraints.txt  requirements.txt  setup.cfg
g5k/kameleon/steps/data/xpctl/src/xpctl/: __init__.py  cli.py  schemas.py
g5k/kameleon/steps/data/xpctl/src/xpctl/launchers/: __init__.py  command.py  controller.py  helpers.py  identification.py  jupyter.py
mpi/: primes.c
nrm-launcher/: kill  launcher.sh  manifest.json  nrmd_conf.json
nrm-topology/: Makefile  README.md  cpu.h  device.h  topology.c  trace.h
pySTREAM/: .gitignore  README  setup.py
v0.7/: default.nix  shell.nix  xp.sh
(+6529 files in other folders)
