# packaging details ####################

[metadata]
name = xpctl
author = Raphaël Bleuse
author_email = raphael.bleuse@inria.fr
version = attr: src.xpctl.__version__

[options]
zip_safe = False
package_dir = =src
packages = xpctl
install_requires =
    cerberus
    click
    ruamel.yaml

[options.entry_points]
console_scripts =
    xpctl=xpctl.cli:cli
